<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">


    <View
        android:id="@+id/vw_eliminar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/iv_volver"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/flecha"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/vw_eliminar"
        app:layout_constraintTop_toTopOf="@+id/vw_eliminar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image"
        android:scaleType="centerCrop"
        android:layout_marginStart="250dp"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/et_nombre2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_nombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_codigo2"
        app:layout_constraintStart_toStartOf="@+id/vw_eliminar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_codigo2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_codigo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_cantidad2"
        app:layout_constraintStart_toStartOf="@+id/vw_eliminar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_cantidad2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_cantidad"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_precio2"
        app:layout_constraintStart_toStartOf="@+id/vw_eliminar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_precio2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_precio"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/vw_eliminar"
        app:layout_constraintStart_toStartOf="@+id/vw_eliminar"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tv_eliminar"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:text="@string/eliminar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintEnd_toEndOf="@+id/vw_eliminar"
        app:layout_constraintBottom_toBottomOf="@+id/vw_eliminar"/>



</androidx.constraintlayout.widget.ConstraintLayout>