<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <View
        android:id="@+id/vw_agregar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/iv_agregar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="350dp"
        android:src="@drawable/agregar"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/iv_volver"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/flecha"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/vw_agregar"
        app:layout_constraintTop_toTopOf="@+id/vw_agregar"/>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_nombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_codigo"
        app:layout_constraintStart_toStartOf="@+id/vw_agregar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_codigo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_cantidad"
        app:layout_constraintStart_toStartOf="@+id/vw_agregar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_cantidad"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_cantidad"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_precio"
        app:layout_constraintStart_toStartOf="@+id/vw_agregar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/ingrese_precio"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toBottomOf="@+id/vw_agregar"
        app:layout_constraintStart_toStartOf="@+id/vw_agregar"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_agregar2"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:text="@string/agregar2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="@+id/vw_agregar"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/vw_agregar"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>