<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">


    <View
        android:id="@+id/vw_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/iv_volver"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/flecha"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/vw_fondo"
        app:layout_constraintTop_toTopOf="@+id/vw_fondo"/>

    <ImageView
        android:id="@+id/iv_buscar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="250dp"
        android:src="@drawable/agregar"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_producto"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/vw_linea1"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_buscar"/>

    <View
        android:id="@+id/vw_linea1"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@id/iv_buscar"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="@+id/iv_buscar"/>

    <TextView
        android:id="@+id/tv_buscar"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:text="@string/buscar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        android:layout_marginEnd="190dp"
        app:layout_constraintEnd_toEndOf="@id/iv_buscar"
        android:layout_marginTop="310dp"
        app:layout_constraintTop_toTopOf="@+id/iv_buscar"
        />

    <EditText
        android:id="@+id/et_buscar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/nombre_codigo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginEnd="190dp"
        app:layout_constraintEnd_toEndOf="@id/iv_buscar"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toTopOf="@+id/iv_buscar"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@color/grey"
        android:layout_marginEnd="210dp"
        app:layout_constraintEnd_toEndOf="@id/iv_buscar"
        android:layout_marginTop="415dp"
        app:layout_constraintTop_toTopOf="@+id/iv_buscar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_ncodigo_ncantidad_nprecio"
        android:maxLines="4"
        android:ellipsize="end"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="@+id/tv_buscar"
        app:layout_constraintEnd_toEndOf="@+id/iv_buscar"
        android:layout_marginEnd="230dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>